epub4j-native/cpp/include/epub_native.h

// ============================================================================
// Error Codes
// ============================================================================

typedef enum {
    EPUB_NATIVE_SUCCESS = 0,
    EPUB_NATIVE_ERROR_PARSE = 1,
    EPUB_NATIVE_ERROR_IO = 2,
    EPUB_NATIVE_ERROR_MEMORY = 3,
    EPUB_NATIVE_ERROR_INVALID_ARG = 4,
    EPUB_NATIVE_ERROR_NOT_FOUND = 5,
    EPUB_NATIVE_ERROR_NAMESPACE = 6
} EpubNativeError;
typedef struct EpubNativeNCXDocument EpubNativeNCXDocument;
// ============================================================================
// NCX Document (EPUB 2 TOC)
// ============================================================================

/**
 * Parse an NCX document from XML content
 * @param xml_content UTF-8 XML string
 * @param xml_length Length of XML content
 * @param out_doc Output document pointer
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_ncx_parse(
    const char* xml_content,
    size_t xml_length,
    EpubNativeNCXDocument** out_doc
);
/**
 * Free an NCX document
 * @param doc Document to free
 */
EPUB_NATIVE_API void epub_native_ncx_free(EpubNativeNCXDocument* doc);
// NCX TOC Reference structure
typedef struct {
    const char* title;
    const char* href;
    int play_order;
    int has_children;
} EpubNativeTOCReference;
/**
 * Get TOC references from NCX document
 * @param doc NCX document
 * @param out_refs Output array of TOC references
 * @param out_count Output count of references
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_ncx_get_toc_references(
    EpubNativeNCXDocument* doc,
    EpubNativeTOCReference** out_refs,
    size_t* out_count
);
/**
 * Free TOC references array
 * @param refs Array to free
 * @param count Count of items
 */
EPUB_NATIVE_API void epub_native_ncx_free_toc_references(
    EpubNativeTOCReference* refs,
    size_t count
);
/**
 * Write NCX document to string
 * @param identifiers Array of identifier strings
 * @param identifier_count Count of identifiers
 * @param title Document title
 * @param authors Array of author strings
 * @param author_count Count of authors
 * @param toc_refs TOC references
 * @param toc_count Count of TOC references
 * @param out_xml Output XML string (caller must free)
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_ncx_write(
    const char** identifiers,
    size_t identifier_count,
    const char* title,
    const char** authors,
    size_t author_count,
    const EpubNativeTOCReference* toc_refs,
    size_t toc_count,
    char** out_xml
);
// ============================================================================
// Navigation Document (EPUB 3 TOC)
// ============================================================================

/**
 * Create EPUB 3 navigation document
 * @param title Document title
 * @param toc_refs TOC references
 * @param toc_count Count of TOC references
 * @param out_xhtml Output XHTML string (caller must free)
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_nav_create(
    const char* title,
    const EpubNativeTOCReference* toc_refs,
    size_t toc_count,
    char** out_xhtml
);