epub4j-native/java/src/main/java/org/grimmory/epub4j/native_parsing/EpubNativeHeaders.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_ncx_parse(const char *xml_content, size_t xml_length, EpubNativeNCXDocument **out_doc)
     * }
     */
    public static MethodHandle epub_native_ncx_parse$handle() {
        return epub_native_ncx_parse.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_ncx_parse(const char *xml_content, size_t xml_length, EpubNativeNCXDocument **out_doc)
     * }
     */
    public static MemorySegment epub_native_ncx_parse$address() {
        return epub_native_ncx_parse.ADDR;
    }

    /**
     * {@snippet lang=c :
     * EpubNativeError epub_native_ncx_parse(const char *xml_content, size_t xml_length, EpubNativeNCXDocument **out_doc)
     * }
     */
    public static int epub_native_ncx_parse(MemorySegment xml_content, long xml_length, MemorySegment out_doc) {
        var mh$ = epub_native_ncx_parse.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_ncx_parse", xml_content, xml_length, out_doc);
            }
            return (int)mh$.invokeExact(xml_content, xml_length, out_doc);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_ncx_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_ncx_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void epub_native_ncx_free(EpubNativeNCXDocument *doc)
     * }
     */
    public static FunctionDescriptor epub_native_ncx_free$descriptor() {
        return epub_native_ncx_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void epub_native_ncx_free(EpubNativeNCXDocument *doc)
     * }
     */
    public static MethodHandle epub_native_ncx_free$handle() {
        return epub_native_ncx_free.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void epub_native_ncx_free(EpubNativeNCXDocument *doc)
     * }
     */
    public static MemorySegment epub_native_ncx_free$address() {
        return epub_native_ncx_free.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void epub_native_ncx_free(EpubNativeNCXDocument *doc)
     * }
     */
    public static void epub_native_ncx_free(MemorySegment doc) {
        var mh$ = epub_native_ncx_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_ncx_free", doc);
            }
            mh$.invokeExact(doc);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_ncx_get_toc_references {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_ncx_get_toc_references");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_ncx_get_toc_references(EpubNativeNCXDocument *doc, EpubNativeTOCReference **out_refs, size_t *out_count)
     * }
     */
    public static FunctionDescriptor epub_native_ncx_get_toc_references$descriptor() {
        return epub_native_ncx_get_toc_references.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_ncx_get_toc_references(EpubNativeNCXDocument *doc, EpubNativeTOCReference **out_refs, size_t *out_count)
     * }
     */
    public static MethodHandle epub_native_ncx_get_toc_references$handle() {
        return epub_native_ncx_get_toc_references.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_ncx_get_toc_references(EpubNativeNCXDocument *doc, EpubNativeTOCReference **out_refs, size_t *out_count)
     * }
     */
    public static MemorySegment epub_native_ncx_get_toc_references$address() {
        return epub_native_ncx_get_toc_references.ADDR;
    }

    /**
     * {@snippet lang=c :
     * EpubNativeError epub_native_ncx_get_toc_references(EpubNativeNCXDocument *doc, EpubNativeTOCReference **out_refs, size_t *out_count)
     * }
     */
    public static int epub_native_ncx_get_toc_references(MemorySegment doc, MemorySegment out_refs, MemorySegment out_count) {
        var mh$ = epub_native_ncx_get_toc_references.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_ncx_get_toc_references", doc, out_refs, out_count);
            }
            return (int)mh$.invokeExact(doc, out_refs, out_count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_ncx_free_toc_references {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_ncx_free_toc_references");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void epub_native_ncx_free_toc_references(EpubNativeTOCReference *refs, size_t count)
     * }
     */
    public static FunctionDescriptor epub_native_ncx_free_toc_references$descriptor() {
        return epub_native_ncx_free_toc_references.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void epub_native_ncx_free_toc_references(EpubNativeTOCReference *refs, size_t count)
     * }
     */
    public static MethodHandle epub_native_ncx_free_toc_references$handle() {
        return epub_native_ncx_free_toc_references.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void epub_native_ncx_free_toc_references(EpubNativeTOCReference *refs, size_t count)
     * }
     */
    public static MemorySegment epub_native_ncx_free_toc_references$address() {
        return epub_native_ncx_free_toc_references.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void epub_native_ncx_free_toc_references(EpubNativeTOCReference *refs, size_t count)
     * }
     */
    public static void epub_native_ncx_free_toc_references(MemorySegment refs, long count) {
        var mh$ = epub_native_ncx_free_toc_references.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_ncx_free_toc_references", refs, count);
            }
            mh$.invokeExact(refs, count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_ncx_write {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_LONG_LONG,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_LONG_LONG,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_LONG_LONG,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_ncx_write");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_ncx_write(const char **identifiers, size_t identifier_count, const char *title, const char **authors, size_t author_count, const EpubNativeTOCReference *toc_refs, size_t toc_count, char **out_xml)
     * }
     */
    public static FunctionDescriptor epub_native_ncx_write$descriptor() {
        return epub_native_ncx_write.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_ncx_write(const char **identifiers, size_t identifier_count, const char *title, const char **authors, size_t author_count, const EpubNativeTOCReference *toc_refs, size_t toc_count, char **out_xml)
     * }
     */
    public static MethodHandle epub_native_ncx_write$handle() {
        return epub_native_ncx_write.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_ncx_write(const char **identifiers, size_t identifier_count, const char *title, const char **authors, size_t author_count, const EpubNativeTOCReference *toc_refs, size_t toc_count, char **out_xml)
     * }
     */
    public static MemorySegment epub_native_ncx_write$address() {
        return epub_native_ncx_write.ADDR;
    }

    /**
     * {@snippet lang=c :
     * EpubNativeError epub_native_ncx_write(const char **identifiers, size_t identifier_count, const char *title, const char **authors, size_t author_count, const EpubNativeTOCReference *toc_refs, size_t toc_count, char **out_xml)
     * }
     */
    public static int epub_native_ncx_write(MemorySegment identifiers, long identifier_count, MemorySegment title, MemorySegment authors, long author_count, MemorySegment toc_refs, long toc_count, MemorySegment out_xml) {
        var mh$ = epub_native_ncx_write.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_ncx_write", identifiers, identifier_count, title, authors, author_count, toc_refs, toc_count, out_xml);
            }
            return (int)mh$.invokeExact(identifiers, identifier_count, title, authors, author_count, toc_refs, toc_count, out_xml);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_nav_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_LONG_LONG,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_nav_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_nav_create(const char *title, const EpubNativeTOCReference *toc_refs, size_t toc_count, char **out_xhtml)
     * }
     */
    public static FunctionDescriptor epub_native_nav_create$descriptor() {
        return epub_native_nav_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_nav_create(const char *title, const EpubNativeTOCReference *toc_refs, size_t toc_count, char **out_xhtml)
     * }
     */
    public static MethodHandle epub_native_nav_create$handle() {
        return epub_native_nav_create.HANDLE;
    }
